# ELT-Project

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
data_foundry/: dbt_project.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
generator/: generate_sap_data.py
loader/: load_bronze.py
tests/: test_basic.py  test_database.py
