[project]
name = "elt-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "faker>=40.23.0",
    "pandas>=2.3.3",
    "prefect>=3.7.5",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
]

[tool.ruff]
line-length = 120
